objects/holidays__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of Holidays on Cummins</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Reason holiday</description>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holiday_Date__c</fullName>
        <description>Date for holiday</description>
        <label>Holiday Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region where Holiday apply</description>
        <label>Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>holidays</label>
</CustomObject>